[package]
name = "pos2pot"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.2.1"
csv = "1.1"
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vasp_parser = {path = "../../lib/vasp_parser/"}
